--- a/package.json
+++ b/package.json
@@ -9,11 +9,17 @@
   ],
   "author": "Shawn Allen",
   "license": "MIT",
+  "scripts": {
+    "test": "remark --use . --tree-out test.md"
+  },
   "dependencies": {
     "@babel/generator": "^7.5.5",
     "@babel/parser": "^7.5.5",
     "@babel/plugin-syntax-jsx": "^7.2.0",
     "@babel/traverse": "^7.5.5",
     "unist-util-visit": "^2.0.0"
+  },
+  "devDependencies": {
+    "remark-cli": "^7.0.0"
   }
 }
